--- a/Project1Start.Rmd
+++ b/Project1Start.Rmd
@@ -4,4 +4,15 @@ author: "Ilana Feldman"
 date: "10/1/2021"
 ---
 
-This is a test to see if the Readme.md file works. It *probably* doesn't.
+This project will, hopefully, contain a vignette that contacts the Covid-19 API that I have chosen and return well-formatted, parsed data. This vignette will be found in another file, to be named. It will contain the following components:
+
+  1. A list of all required packages
+  2. Functions that contact the Covid-19 API and return well-formatted, parsed data.
+    * There will be at least six spots where a user may customize the returned data.
+    * Inputs will be flexible and easy to specify, for example allowing either a quoted string or its abbreviation.
+  3. A basic exploratory data analysis that:
+    * Takes from multiple endpoints.
+    * Creates new variables from existing variables in the dataset.
+    * Contains contingency tables.
+    * Contains numerical summaries at each setting of at least one categorical variable.
+    * Contains at least five well-formatted plots, including each of a bar plot, histogram, box plot, and scatter plot.
