Fixed some typos + added one more scatter plot.

--- a/Project1Start.Rmd
+++ b/Project1Start.Rmd
@@ -6,12 +6,12 @@ date: "10/1/2021"
 
 ## Description
 
-This project will contain a vignette that contacts the Covid-19 API that I have chosen and return well-formatted, parsed data. This vignette will be found in PokemonVignette.md. It will contain the following components:
+This project contains a vignette that contacts the Pokemon API that I have chosen and return well-formatted, parsed data. This vignette will be found in PokemonVignette.md. It contains the following components:
 
   1. A list of all required packages
-  2. Functions that contact the Covid-19 API and return well-formatted, parsed data.
-    * There will be at least six spots where a user may customize the returned data.
-    * Inputs will be flexible and easy to specify, allowing for column customization when appropriate.
+  2. Functions that contact the Pokemon API and return well-formatted, parsed data.
+    * There are six spots where a user may customize the returned data.
+    * Inputs are flexible and easy to specify, allowing for column customization when appropriate.
   3. A basic exploratory data analysis that:
     * Takes from multiple endpoints.
     * Creates new variables from existing variables in the dataset.
